--- a/templates/top.html
+++ b/templates/top.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>トップ画面</h1>
+    <h1>
+        {% if current_user.is_authenticated %}
+            <a href="{{ url_for('logout') }}"class="other-button other-button-logout">ログアウト</a>
+        {% endif %}
+        トップ画面
+    </h1>
     <hr />
     <div class="top-container">
         <!-- 各画面へのリンク -->
@@ -12,4 +17,5 @@
         <a href="{{url_for('monthly_record')}}"class="top-button top-button-record">月初残高登録</a>
         <a href="{{ url_for('inv_balance_record') }}" class="top-button top-button-cashdraw">残高棚卸画面</a>
     </div>
+
 {% endblock %}
