--- a/static/css/style.css
+++ b/static/css/style.css
@@ -312,7 +312,20 @@ label {
     margin: 0 auto;
 }
 
+/*スマホ画面用の設定*/
 @media screen and (max-width: 600px) {
+    
+    table {
+        width: 100%;
+    }
+
+    th:nth-child(5),td:nth-child(5),
+    th:nth-child(6),td:nth-child(6),
+    th:nth-child(7),td:nth-child(7),
+    th:nth-child(8),td:nth-child(8){
+        display: none;  /*列を非表示にする*/
+    }
+    
     .conteiner{
         width: 100%;
         margin: 0;
