--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ hr {
 }
 
 /***************************************************/
-/* 一覧画面-テーブルスタイル */
+/* テーブルスタイル */
 /***************************************************/
 table {
     border-collapse: separate;  /*境界線 */
@@ -89,15 +89,15 @@ input[type="submit"] {
 
 /* フォームのスタイル */
 form {
-    max-width: 400px; /* フォームの最大幅 */
-    margin: 0 auto; /* 中央寄せ */
-    display: block; /* ブロックを使用 */
+    max-width: 400px; /*フォームの最大幅*/
+    margin: 0 auto; /*中央寄せ*/
+    display: block; /*ブロックを使用*/
 }
 
 /* ラベルのスタイル */
 label {
-    font-weight: bold; /* 強調 */
-    margin-right: 10px; /* ラベルとフィールドの間のスペース */
+    font-weight: bold; /*強調*/
+    margin-right: 10px; /*ラベルとフィールドの間のスペース*/
     white-space: nowrap;
 }
 /***************************************************/
@@ -151,14 +151,15 @@ label {
 
 /* フォーム内のラベルとインプットボックスを横に並べる */
 .form-group {
-    display: flex; /* フレックスボックスを使用 */
-    flex-direction: row; /* 水平方向に並べる */
-    justify-content: center; /* 水平方向に中央寄せ */
-    align-items: center; /* 垂直方向に中央寄せ */
-    gap: 10px; /* ラベルとインプットボックスの間に余白 */
-    margin: 10px; /* コンテナ同士の間隔 */
+    display: flex; /*フレックスボックスを使用*/
+    flex-direction: row; /*水平方向に並べる*/
+    justify-content: center; /*水平方向に中央寄せ*/
+    align-items: center; /*垂直方向に中央寄せ*/
+    gap: 10px; /*ラベルとインプットボックスの間に余白*/
+    margin: 10px; /*コンテナ同士の間隔*/
 }
 
+/* 検索窓のスタイル */
 .form-group-serch {
     display: flex; /* フレックスボックスを使用 */
     flex-direction: row; /* 水平方向に並べる */
@@ -313,19 +314,24 @@ label {
 }
 
 /*スマホ画面用の設定*/
-@media screen and (max-width: 600px) {
+  @media screen and (max-width: 600px) {
     
-    table {
-        width: 100%;
+    .table-history {
+        width: 90%;
     }
 
     th:nth-child(5),td:nth-child(5),
     th:nth-child(6),td:nth-child(6),
     th:nth-child(7),td:nth-child(7),
-    th:nth-child(8),td:nth-child(8){
+    th:nth-child(8),td:nth-child(8),
+    th:nth-child(11),td:nth-child(11){
         display: none;  /*列を非表示にする*/
     }
     
+    th,td{
+        font-size: 2vw; /* 画面幅の2%のフォントサイズ */
+    }
+
     .conteiner{
         width: 100%;
         margin: 0;
@@ -336,7 +342,7 @@ label {
         display: block;
         text-align: center;
     }
-}
+ } 
 
 button {
     padding: 10px 20px;
@@ -347,6 +353,5 @@ button {
 input[type="text"],input[type="password"],input[type="email"] {
     padding: 10px;
     font-size: 16px;
-    width: 100%;
     box-sizing: border-box;
 }
