--- a/templates/history.html
+++ b/templates/history.html
@@ -14,14 +14,14 @@
 
             <label for="account">口座:</label>
             <input type="text" name="account" value="{{ account }}" list="account_list" class="account-input">
-            <datalist value="account_list">
+            <!-- <datalist value="account_list">
                 <option value="常陽銀行"></option>
                 <option value="千葉興銀"></option>
                 <option value="政光財布"></option>
                 <option value="梢財布"></option>
                 <option value="コジカ"></option>
-            </datalist>
-            <input type="submit" value="検索" class="submit submit-serch" />
+            </datalist> -->
+            <input type="submit" value="検索" class="submit submit-serch"/>
         </div>
     </form>
 
