--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -18,7 +18,7 @@
     <!-- ▲▲▲▲▲ flashメッセージ ▲▲▲▲▲ -->
     <input type="submit" class="submit-login" value="サインアップ">
 </form>
-
+<div style="height: 20px;"></div>
 <p>すでにアカウントをお持ちの場合は、
     <a href="{{ url_for('login') }}">こちら</a>
     からログインしてください。
