--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,11 +1,13 @@
 {% macro render_field(field) %}
-    <dt>{{ field.label }}</dt>
-    <dd>{{ field(**kwargs)| safe }}</dd>
-    {% if field.errors %}
-    <ul style="color: red;">
-        {% for error in field.errors %}
-            <li>{{ error }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    <div class="form-group-login">
+        <dt>{{ field.label }}</dt>
+        <dd>{{ field(**kwargs)| safe }}</dd>
+        {% if field.errors %}
+        <ul style="color: red;">
+            {% for error in field.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
 {% endmacro %}
