--- a/templates/cash_draw.html
+++ b/templates/cash_draw.html
@@ -18,12 +18,12 @@
                 <!-- BalanceManagementテーブル -->
                 <label for="Draw_Sauce">引出元</label>
                 <input type="text" id="Draw_Sauce" name="Draw_Sauce" list="DrawSauce_list" required>
-                <datalist id="DrawSauce_list">
+                <!-- <datalist id="DrawSauce_list">
                     <option value="常陽銀行"></option>
                     <option value="千葉興銀"></option>
                     <option value="政光財布"></option>
                     <option value="梢財布"></option>
-                </datalist>
+                </datalist> -->
                 <br><br>
             </div>
 
@@ -31,12 +31,12 @@
                 <!-- TransactionItemテーブル -->
                 <label for="Draw_Destination">引出先</label>
                 <input type="text" id="Draw_Destination" name="Draw_Destination" list="DrawDestination_list" required>
-                <datalist id="DrawDestination_list">
+                <!-- <datalist id="DrawDestination_list">
                     <option value="常陽銀行"></option>
                     <option value="千葉興銀"></option>
                     <option value="政光財布"></option>
                     <option value="梢財布"></option>
-                </datalist>
+                </datalist> -->
                 <br><br>
             </div>
 
