--- a/templates/record.html
+++ b/templates/record.html
@@ -99,13 +99,13 @@
                 <!-- BalanceManagementテーブル -->
                 <label for="AssetType">口座</label>
                 <input type="text" id="AssetType" name="AssetType" list="AssetType_list" required>
-                <datalist id="AssetType_list">
+                <!-- <datalist id="AssetType_list">
                     <option value="常陽銀行"></option>
                     <option value="千葉興銀"></option>
                     <option value="政光財布"></option>
                     <option value="梢財布"></option>
                     <option value="コジカ"></option>
-                </datalist>
+                </datalist> -->
                 <br><br>
             </div>
             
